fdo#75955 use SHA1 from openssl/nss instead of rtl_digest_sha1

Change-Id: I92186b2ed8426d59e31080cfb629beb02cd01c41